--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,16 @@
      background-color: rgb(250, 5, 5);
      
  }
+ .productos2{
+    width:  100%;
+    height: 500px;
+    background-color: rgb(255, 6, 6);
+ }
+ .linea3{
+    width: 90%;
+    height: 3px;
+    background-color: rgb(255, 255, 255);
+ }
 
 
  
