--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,14 @@
         height: 50%;
         background-color: burlywood;
     }
+    & .img-productos1{
+        height: 50%;
+        background-color: burlywood;
+    }
+    & .img-productos2{
+        height: 50%;
+        background-color: burlywood;
+    }
     
  }
  
