--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@
      padding: 20px;
      margin: auto;
      box-sizing: border-box;
-     width: 50%;
-     height: auto;
+     width: 100%;
+     height: 100%;
      background-color: rgb(241, 21, 13);
      .river2{
         float: right;
@@ -48,9 +48,8 @@
  header {
      width: 90%;
      height: 100;
-     background-color: rgba(241, 69, 17, 0.904);
+     background-color: red
  }
-
  .descripcion {
      width: 90%;
      height: 470px;
@@ -70,36 +69,40 @@
      background-color: rgb(16, 13, 202);
 
  }
- #articulos{
-    height: 300px;
-    width: 100px;
-    background-color: red;
-    display: flex;
- }
- .productos {
-  
-    height: 300px;
-    width: 100%;
-    background-color: red;
 
-    & .img-productos{
-        height: 50%;
-        background-color: burlywood;
-    }
-    & .img-productos1{
-        height: 50%;
-        background-color: burlywood;
-    }
-    & .img-productos2{
-        height: 50%;
-        background-color: burlywood;
-    }
-    
- }
- .btn{
-    background-color: black;
-    
- }
+ .articulos {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+  }
+  
+  .articulo {
+    text-align: center;
+  }
+  
+  .articulo img {
+    width: 250px;
+    height: 400px;
+  }
+  
+  .staff {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+  }
+  
+  .staf {
+    text-align: center;
+  }
+
+  .staf img {
+    width: 250px;
+    height: 300px;
+  }   
+ 
+
+ 
+
  
  
 
